fixed invisibility bug

--- a/public/Game/src/main.css
+++ b/public/Game/src/main.css
@@ -7,12 +7,6 @@ body{
     background: url("./images/twon.png");
 }
 
-#game-canvas
-{
-  width: 100%;
-  height: 100%;
-}
-
 .content{
     margin-top:200px;
     background-color:aqua;
